--- a/textRecg/app/src/main/res/values/strings.xml
+++ b/textRecg/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">textRecg</string>
+    <string name="eng_language_pack">
+        https://raw.githubusercontent.com/tesseract-ocr/tessdata/3.04.00/eng.traineddata
+    </string>
 </resources>
